Footer: fix mobile grid-gap

--- a/src/assets/less/components/footer.less
+++ b/src/assets/less/components/footer.less
@@ -242,6 +242,7 @@
 					@media (max-width: @screen-sm-max) {
 						grid-template-columns: repeat(2, 1fr);
 						grid-template-rows: repeat(2, 1fr);
+						grid-gap: 0;
 					}
 
 					@media (max-width: @screen-xs-max) {
